# poker-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
backend/: AGENTS.md  README.md  pyproject.toml  setup.py
backend/src/poker_sim/: app.py  bots.py  cards.py  engine.py  session.py
backend/tests/: test_bots.py  test_engine.py  test_session.py
frontend/: AGENTS.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
plans/: v1-playable-poker-simulator.md
src/poker_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  preflight.py
src/poker_agent/capture/: __init__.py  capture.py  change_detect.py  window.py
src/poker_agent/executor/: __init__.py  coordinates.py  executor.py
src/poker_agent/logging/: __init__.py  hand_logger.py  session_logger.py
src/poker_agent/models/: __init__.py  actions.py  game_state.py  hand_record.py
src/poker_agent/parser/: __init__.py  parser.py  prompts.py
src/poker_agent/strategy/: __init__.py  base.py  gto_strategy.py  llm_strategy.py  poker_math.py  prompts.py
