[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-sim"
version = "0.1.0"
description = "Local 6-max no-limit hold'em simulator with heuristic bots"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["src"]
